# Memory-Safe-English-App

./: .gitignore  README.md
services/proxy-rs/: Cargo.toml  Dockerfile  README.md
services/proxy-rs/src/: admin.rs  cache.rs  client_ip.rs  config.rs  frontend.rs  gc.rs  http_response.rs  lib.rs  main.rs  problem_bank.rs  problems.rs  proxy.rs  rate_limit.rs  readiness.rs  request_guard.rs  request_id.rs  response_headers.rs  routes.rs  security_audit.rs  state.rs
services/worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/worker/app/: __init__.py  application.py  config.py  context_profile.py  models.py  observability.py  rate_limit.py  runtime.py  security.py  server.py  text_analysis.py
services/worker/app/adaptive_session/: __init__.py  service.py
services/worker/app/analysis/: __init__.py  models.py  service.py
services/worker/app/analytics_summary/: __init__.py  service.py
services/worker/app/assessment/: __init__.py  service.py
services/worker/tests/: conftest.py  test_adaptive_session.py  test_analysis_service.py  test_analytics_summary.py  test_assessment.py  test_chunking.py  test_collapse_patterns.py  test_listening_plan.py  test_nlp_backend.py  test_practice_set.py  test_public_corpora.py  test_reader_plan.py  test_request_parser.py  test_rescue_plan.py  test_runtime.py  test_server.py  test_skeleton.py  test_speaking_plan.py  test_training_prep.py  test_training_prep_speaking.py
services/worker/training/: README.md  augment_speaking_dataset.py  build_wm_training_corpus.py  generate_speaking_dataset.py  import_public_corpora.py  prepare_seq2seq_data.py  public_corpora.py  sample_eval_raw.jsonl  sample_train_raw.jsonl  train_seq2seq_lora.py
(+178 files in other folders)
