[package]
name = "mse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "json", "matched-path", "tokio"] }
bytes = "1"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
